# parping

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/parping/: __init__.py  parping-cli.py  parping.py
