[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parping"
version = "0.0.1"
authors = [
  { name="Dan Liebster", email="daniel.liebster@gmail.com" },
]
description = "A simple parallel ipv4 pinger"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dliebster/parping"
Issues = "https://github.com/dliebster/parping/issues"