[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parping"
version = "0.0.2"
authors = [
  { name="Dan Liebster", email="daniel.liebster@gmail.com" },
]
description = "A simple parallel ipv4 ping utility"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dliebster/parping"
Issues = "https://github.com/dliebster/parping/issues"